# Lempi

./: Cargo.toml
lempi-caller/: Cargo.toml
lempi-caller/src/: author.rs  block.rs  call.rs  chain.rs  details.rs  extrinsic_builder.rs  main.rs  root_screen.rs  scaffold.rs  sr25519.rs
src/: author.rs  call.rs  chain.rs  details.rs  extensions.rs  extrinsic_builder.rs  main.rs  scaffold.rs
