[package]
name = "lempi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
clap_derive = "4.5.0"
frame-metadata = "16.0.0"
hex = "0.4.3"
# jsonrpsee = { version = "0.20.0", features = ["full"] }
mnemonic-external = {git = "https://github.com/Alzymologist/mnemonic-external"}
parity-scale-codec = {version = "3.6.5", features = ["derive"]}
primitive-types = "0.12.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
smoldot-light = { version = "0.15.0", default-features = false, features = ["std"] }
substrate-constructor = "0.1.0"
substrate-crypto-light = {git = "https://github.com/Alzymologist/substrate-crypto-light"}
substrate_parser = "0.6.0"
termwiz = { version = "0.22.0" }
tokio = { version = "1.35.1", features = ["full"] }

